--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,12 @@
             "styles": [
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/leaflet/dist/leaflet.css"
+              "node_modules/leaflet/dist/leaflet.css",
+              "node_modules/leaflet-draw/dist/leaflet.draw.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/leaflet-draw/dist/leaflet.draw.js"
+            ]
           },
           "configurations": {
             "production": {
