--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
+    "leaflet-geometryutil": "^0.10.3",
     "leaflet-geosearch": "^4.0.0",
+    "point-in-polygon": "^1.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -33,6 +36,8 @@
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.16",
+    "@types/leaflet-draw": "^1.0.11",
+    "@types/point-in-polygon": "^1.1.5",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
