--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,6 @@ steps:
 
 - task: AzureStaticWebApp@0
   inputs:
-    app_location: 'dist/angular-basic'
+    app_location: 'dist/gezellig-tijd-client/browser'
     skip_app_build: true
     azure_static_web_apps_api_token: $(AzureStaticWebAppApiToken) 
