--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "leaflet-geometryutil": "^0.10.3",
     "leaflet-geosearch": "^4.0.0",
     "ngx-timeline": "^5.0.0",
+    "point-in-polygon": "^1.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
